Quorum/Library/Tests/Actions/Pass/ReturnNowInOnCreate.quorum
class Main
    action Main
        output "pass"
    end

    on create
        return now
    end
end