Quorum/Library/Tests/Actions/Fail/DoubleConstructor.quorum
class A
    integer i = 0

    on create
    i = 4
    end

    on create
    i = 5
    end

    action Main
        output i
    end
end